--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-hello world!
+<!DOCTYPE html>
+<html lang="zh-CN">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>拾日十日</title>
+        <style>
+            body{
+                margin: 0;
+            }
+        </style>
+    </head>
+    <body>
+        <div style="
+            background-color: #f1f1f1;
+            text-align: center;
+            padding: 70px;">
+            <p>此处应该有一个头像</p>
+        </div>
+        <div style="
+            max-width: 700px;
+            margin: 30px auto;
+            padding: 15px;
+            line-height: 1.7;">
+            <p>sry 202100130144</p>
+            <p>云计算</p>
+            <p>实验三</p>
+            <p>2024.3.22</p>
+            <p>晚上好</p>
+        </div>
+        <div style="
+            background-color: #f1f1f1;
+            text-align: center;
+            padding: 40px;
+            font-size: 12px;">
+        </div>
+    </body>
+</html>
