--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             line-height: 1.7;">
             <p>sry 202100130144</p>
             <p>云计算</p>
-            <p>实验三</p>
+            <a href="lab3.docx">实验三链接在这里</a>
             <p>2024.3.22</p>
             <p>晚上好</p>
         </div>
