--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
             margin: 30px auto;
             padding: 15px;
             line-height: 1.7;">
-            <p>sry 202100130144</p>
-            <p>云计算</p>
-            <a href="lab3.docx">实验三链接在这里</a>
-            <p>2024.3.22</p>
-            <p>晚上好</p>
+            <p>孙瑞阳 202100130144</p>
+            <img src="a.png">实验三报告</img>
         </div>
         <div style="
             background-color: #f1f1f1;
