--- a/index.html
+++ b/index.html
@@ -15,21 +15,14 @@
             background-color: #f1f1f1;
             text-align: center;
             padding: 70px;">
-            <p>此处应该有一个头像</p>
+            <p>孙瑞阳 202100130144</p>
         </div>
         <div style="
             max-width: 700px;
             margin: 30px auto;
             padding: 15px;
             line-height: 1.7;">
-            <p>孙瑞阳 202100130144</p>
-            <img src="a.png">实验三报告</img>
-        </div>
-        <div style="
-            background-color: #f1f1f1;
-            text-align: center;
-            padding: 40px;
-            font-size: 12px;">
+            <a herf="https://docs.qq.com/doc/DSVJsWUdKeWFzSmpj">实验三报告</img>
         </div>
     </body>
 </html>
