--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             margin: 30px auto;
             padding: 15px;
             line-height: 1.7;">
-            <a herf="https://docs.qq.com/doc/DSVJsWUdKeWFzSmpj">实验三报告</a>
+            <a herf="https://docs.qq.com/doc/DSVJsWUdKeWFzSmpj">点击查看实验三报告</a>
         </div>
     </body>
 </html>
